# jimlib

./: LICENSE  README
examples/: CMakeLists.txt  PngImage.cpp  PngImage.h  main.cpp
include/Convolution/: Convolution.hpp  Sobel.hpp
include/EdgeDetection/: Canny.hpp  Sobel.hpp
include/Image/: BinaryImage.h  BinaryImage.hpp  Cluster.h  Cluster.hpp  GenericImage.h  GenericImage.hpp  GenericPixel.h  GenericPixel.hpp  GrayImage.h  GrayImage.hpp  IntegralImage.h  IntegralImage.hpp  PixelTypes.h  PixelTypes.hpp  RGB24Image.h  RGB24Image.hpp  RGBA32Image.h  RGBA32Image.hpp
include/Processing/: Cluster.hpp  FastGaussianBlur.hpp
include/Transformation/: AffineTransfromation.hpp  GenericTransformationTable.hpp  HoughLine.hpp
include/Utils/: CheckTypes.h  CheckTypes.hpp  Graph.hpp  MinMax.hpp  Point.hpp  Rect.h  Rect.hpp  Search.hpp
src/: BinaryImage.cpp  Cluster.cpp  GrayImage.cpp  IntegralImage.cpp  PixelTypes.cpp  RGB24Image.cpp  RGBA32Image.cpp  Rect.cpp
